@@ -9,8 +9,8 @@
 #
 # Generated by gnulib-tool.
 #
-# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname gettext pathmax regex restrict save-cwd vasnprintf xalloc xgetcwd xsize
+# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit gettext pathmax regex restrict save-cwd vasnprintf xalloc xgetcwd xsize
 
 AUTOMAKE_OPTIONS = 1.8 gnits
 
@@ -50,6 +50,8 @@ MOSTLYCLEANFILES += alloca.h alloca.h-t
 
 
 libgnu_a_SOURCES += dirname.h dirname.c basename.c stripslash.c
+
+libgnu_a_SOURCES += exit.h
 
 libgnu_a_SOURCES += gettext.h
 
