@@ -1,3 +1,7 @@
+2004-10-05  Derek Price  <derek@ximbiot.com>
+
+	* Makefile.am (libcvs_a_SOURCES): Move exit.h to its own section.
+
 2004-10-05  Conrad T. Pino  <Conrad@Pino.com>
 
 	* libcvs.dsp: Remove "savecwd.c", "savecwd.h", "xgetwd.c" from project.
